--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "old-internet-components",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"type": "module",
 	"main": "dist/old-internet-components.umd.js",
 	"module": "dist/old-internet-components.es.js",
 	"unpkg": "dist/old-internet-components.umd.js",
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
