--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "old-internet-components",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "A collection of old internet components",
 	"type": "module",
 	"main": "dist/old-internet-components.umd.js",
 	"module": "dist/old-internet-components.es.js",
 	"unpkg": "dist/old-internet-components.umd.js",
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/ivgtr/old-internet-components.git"
